# trawl

./: .gitignore  README.md  pyproject.toml  treader.py
.claude/: CLAUDE.md
tests/: conftest.py  test_session.py  test_shapes.py  test_stats.py
trawl/: __init__.py  __main__.py  pricing.py  session.py
trawl/commands/: find.py  read.py  shapes.py  slice.py  stats.py  trace.py
trawl/formatters/: human.py  json.py  toon.py
